--- a/src/app/css/theme.scss
+++ b/src/app/css/theme.scss
@@ -21,7 +21,7 @@ $light: (
     cover-bg: rgba(230,234,242,0.8),
 
     button-link: #fff,
-    button-link-border: #d9dfe9,
+    button-link-border: #fff,
 );
 
 $dark: (
