--- a/src/app/css/zuz.scss
+++ b/src/app/css/zuz.scss
@@ -71,7 +71,7 @@
 .wPqXcWp{width: 100vw;}
 .hzMAS0j{height: 90vh;}
 .g7aWcva{gap: 15px;}
-.cZX4Hnn{color: transparent;background-clip: text;-webkit-background-clip: text;}
+.cV0ruJJ{color: transparent;background-clip: text;-webkit-background-clip: text;}
 .bJeeu9j{background-image: linear-gradient(to right, var(--primary), var(--secondary));}
 .f49WUZy{font-size: 36px;}
 /**
