--- a/src/app/css/zuz.scss
+++ b/src/app/css/zuz.scss
@@ -1,61 +1,61 @@
 /**
 * @file /src/app/done.tsx
 */
-.fXdZS1d{font-size: 24px;}
+.fnGMF4b{font-size: 24px;}
 .f34czo{font-weight: bold;}
-.fXdNIDg{font-size: 16px;}
-.wbzkHNJ{width: 500px;}
-.pGpbI38{padding: 20px;}
-.bqLohRB{border-radius: var(--radius);}
+.fnGACgA{font-size: 16px;}
+.wk1qSlW{width: 500px;}
+.p4bpTRJ{padding: 20px;}
+.bJ5kTQn{border-radius: var(--radius);}
 .dgbsBB{display:flex;}
 .aRefo0{align-items:center;}
 .j5XcAD{justify-content:center;}
 .fEXive{flex-direction:column;}
-.fdrns9Q{font-size: 50px;}
-.mbaBtOg{margin-bottom: 25px;}
-.cXE0UEj{color: var(--red-800);}
-.c4krskq{color: var(--green-700);}
-.mo3dsBX{margin-top: 25px;}
+.fNzPtj2{font-size: 50px;}
+.mkP7UGQ{margin-bottom: 25px;}
+.cnL3SXa{color: var(--red-800);}
+.cmams1Q{color: var(--green-700);}
+.mDLBFEp{margin-top: 25px;}
 /**
 * @file /src/app/error.tsx
 */
-.fB4pieP{font-size: 18px;}
+.fz2wh0w{font-size: 18px;}
 .pg9hBD{position:relative;}
-.zMZZsRX{z-index: 3;}
-.waBbCMP{width: 100%;}
-.pd3ovmEtaZ{padding: 20vh 20px 20px 20px;}
-.hm8qi5k{height: 10px;}
+.zOvofWa{z-index: 3;}
+.wPwmTqM{width: 100%;}
+.pN8kRJ4C5G{padding: 20vh 20px 20px 20px;}
+.hwJ9T70{height: 10px;}
 /**
 * @file /src/app/header.tsx
 */
-.p8DPeUqd{padding: 40px 25px;}
-.zqdBFEX{z-index: 99;}
+.p7ObLtLM{padding: 40px 25px;}
+.zpnOIEr{z-index: 99;}
 
-.hXVkiEW{height: 70px;}
-.fqPGSJX{flex: 1;}
-.glP5TDj{gap: 4px;}
-.wRojU4b{width: 25px;}
-.f8QaiEE{font-weight: 900;}
-.fjEwi1N{font-size: 14px;}
+.hn55HXy{height: 70px;}
+.fJ8WIa8{flex: 1;}
+.g2bvsWM{gap: 4px;}
+.wer0Ide{width: 25px;}
+.f719Soo{font-weight: 900;}
+.frDNuJG{font-size: 14px;}
 .bWllTp1{background: var(--button-link);}
-.baobfnN{border-radius: 5px;}
-.pl3vptj1{padding: 1px 4px 0px 4px;}
-.bwyJiJA{border: 1px var(--button-link-border) solid;}
-.o03ktyj{opacity: 0.5;}
+.bPamIJn{border-radius: 5px;}
+.p2pdmFMg{padding: 1px 4px 0px 4px;}
+.bB09iPp{border: 1px var(--button-link-border) solid;}
+.oGy0t4g{opacity: 0.5;}
 .jQkCyD{justify-content:flex-end;}
-.gylLTW3{gap: 10px;}
+.gLXyilg{gap: 10px;}
 .bNvWhlv{background: rgba(0,0,0,0) !important;}
-.cav7ubO{color: var(--text);}
-.gBBPt2J{gap: 6px;}
-.foelHRG{font-size: 10px;}
-.mLlEtle{margin-left: 20px;}
+.cPlJIWl{color: var(--text);}
+.gzjgimo{gap: 6px;}
+.fDBPTJ5{font-size: 10px;}
+.mqVZsLJ{margin-left: 20px;}
 .tBpFe1{text-decoration:none;}
-.mPvXfAm{margin-right: 1px;}
-.pA0NsJ3{padding: 4px 10px;}
-.bN5ZqEfQb{border-radius: 20px 0px 0px 20px;}
-.z68blK{&:hover{background: var(--primary);border: 1px var(--primary) solid;color: #fff;transform: scale(1.1);}}
-.tZ5vunX{transition: all 0.1s linear 0s;}
-.bMAlDf1L{border-radius: 0px 20px 20px 0px;}
+.moeEcRB{margin-right: 1px;}
+.pWzoSpk{padding: 4px 10px;}
+.b32XQ1HDo{border-radius: 20px 0px 0px 20px;}
+.zxDWw6{&:hover{background: var(--primary);border: 1px var(--primary) solid;color: #fff;transform: scale(1.1);}}
+.teyWf7A{transition: all 0.1s linear 0s;}
+.bVGVEf9j{border-radius: 0px 20px 20px 0px;}
 /**
 * @file /src/app/layout.tsx
 */
@@ -68,53 +68,53 @@
 /**
 * @file /src/app/page.tsx
 */
-.wPqXcWp{width: 100vw;}
-.hzMAS0j{height: 90vh;}
-.g7aWcva{gap: 15px;}
+.woPECne{width: 100vw;}
+.haBRTbj{height: 90vh;}
+.gv7mi5P{gap: 15px;}
 .cV0ruJJ{color: transparent;background-clip: text;-webkit-background-clip: text;}
 .bJeeu9j{background-image: linear-gradient(to right, var(--primary), var(--secondary));}
-.f49WUZy{font-size: 36px;}
+.fm8gT32{font-size: 36px;}
 /**
 * @file /src/app/u/recover/page.tsx
 */
-.mMaElUBq{min-height: calc(100vh - 70px);}
-.wwmGCX8{width: 400px;}
-.gJzVTZA{gap: 12px;}
-.f5aAhOw{font-size: 30px;}
-.mOomtWE{margin-bottom: 30px;}
-.wEpGCwX{width: 100% !important;}
-.mmkwt34{margin-top: 35px;}
+.mVBM4sW1{min-height: calc(100vh - 70px);}
+.wBdrt2B{width: 400px;}
+.gpM4UE9{gap: 12px;}
+.fEGDHln{font-size: 30px;}
+.mAaEuXQ{margin-bottom: 30px;}
+.wl52SDE{width: 100% !important;}
+.mw5mcJL{margin-top: 35px;}
 /**
 * @file /src/app/u/recover/update/page.tsx
 */
-.mEZG9BClB{min-height: calc(100vh - 150px);}
+.ml38PJSjJ{min-height: calc(100vh - 150px);}
 /**
 * @file /src/app/u/recover/verify/[[...token]]/page.tsx
 */
-.wl4RFqE{width: 350px;}
-.mNzbFwb{margin-bottom: 10px;}
+.w2GLF9m{width: 350px;}
+.m3bJHXo{margin-bottom: 10px;}
 .tWQT0y{text-align: center;}
-.fZOBTEB{font-size: 30px !important;}
+.fROXc4e{font-size: 30px !important;}
 /**
 * @file /src/app/u/signin/page.tsx
 */
 /**
 * @file /src/app/u/signup/page.tsx
 */
-.m1nMhQP{margin-top:35px;margin-bottom:35px;}
+.mQQOUve{margin-top:35px;margin-bottom:35px;}
 /**
 * @file /src/app/u/verify/[[...token]]/page.tsx
 */
-.f8vrTmX{font-size: 40px !important;}
+.f77Vt7J{font-size: 40px !important;}
 /**
 * @file /src/app/wrapper.tsx
 */
-.mG9RiNP{min-height: 100vh;}
+.m4WNTO3{min-height: 100vh;}
 /**
 * @file /src/ui.tsx
 */
 .zYXgLK{&:hover{text-decoration:underline;}}
-.cMD9fJP{color: var(--primary);}
+.cVXASpV{color: var(--primary);}
 .bQwERWOioO{background-image: linear-gradient(92deg, var(--primary), #2488c8);}
 .b0Mn3zqLsWB{background-image: linear-gradient(to right, #0090f7, #ba62fc, #f2416b);}
 
@@ -123,6 +123,6 @@
 *Extra Small Devices (Phones)
 */
 @media screen and (max-width: 599px){
-	.zxpnAY{padding: 20px;}
+	.zxjJRx{padding: 20px;}
 }
 
