--- a/src/app/css/zuz.scss
+++ b/src/app/css/zuz.scss
@@ -74,6 +74,7 @@
 .cV0ruJJ{color: transparent;background-clip: text;-webkit-background-clip: text;}
 .bJeeu9j{background-image: linear-gradient(to right, var(--primary), var(--secondary));}
 .fm8gT32{font-size: 36px;}
+.mZRmSop{max-width: 400px;}
 /**
 * @file /src/app/u/recover/page.tsx
 */
