--- a/src/app/css/zuz.scss
+++ b/src/app/css/zuz.scss
@@ -75,9 +75,6 @@
 .bJeeu9j{background-image: linear-gradient(to right, var(--primary), var(--secondary));}
 .fm8gT32{font-size: 36px;}
 /**
-* @file /src/app/push_notifications.tsx
-*/
-/**
 * @file /src/app/u/recover/page.tsx
 */
 .mVBM4sW1{min-height: calc(100vh - 70px);}
@@ -109,6 +106,9 @@
 * @file /src/app/u/verify/[[...token]]/page.tsx
 */
 .f77Vt7J{font-size: 40px !important;}
+/**
+* @file /src/app/webpush.tsx
+*/
 /**
 * @file /src/app/wrapper.tsx
 */
