--- a/src/app/css/zuz.scss
+++ b/src/app/css/zuz.scss
@@ -74,6 +74,9 @@
 .cV0ruJJ{color: transparent;background-clip: text;-webkit-background-clip: text;}
 .bJeeu9j{background-image: linear-gradient(to right, var(--primary), var(--secondary));}
 .fm8gT32{font-size: 36px;}
+.wRprc8z{width: 100px;}
+.hWAqUr1{height: 100px;}
+.blwNFDX{background: red;}
 /**
 * @file /src/app/u/recover/page.tsx
 */
